--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "illuminate/redis": "^5.7",
         "laravel/lumen-framework": "5.7.*",
         "predis/predis": "^1.1",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "wn/lumen-generators": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
